# investor-sentiment-analyser

./: pyproject.toml
r_packages/: crude-oil-sentiment-analysis.R  crude-oil-sentiment-analysis.Rproj  crude-oil-sentiment-analysis.html  crude-oil-sentiment-analysis.txt  crude_oil_reddit_posts.csv
scripts/: ml_models_script.py  pre_process_sentiments.py  raw_table.py  tweets_processed.csv  update_csv.py
